<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nested_scroll_view_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/student_bg"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:layout_marginBottom="@dimen/profile_label_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/load_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/profile_label_margin_top"
            android:orientation="vertical">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/profile_label_margin"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/reload_image_margin"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="@dimen/reload_text_size"
                android:textColor="@color/colorText"
                android:textStyle="bold"
                android:text="@string/string_loading_profile"/>
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="@dimen/profile_label_margin_top"
            android:id="@+id/reload_profile_layout"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/reload_profile"
                android:layout_margin="@dimen/reload_image_margin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/reload_image_WH"
                android:src="@drawable/reload"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/reload_image_margin"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="@dimen/reload_text_size"
                android:textColor="@color/colorText"
                android:textStyle="bold"
                android:text="@string/string_reload_profile"/>
        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_marginRight="@dimen/profile_label_margin"
            android:layout_marginLeft="@dimen/profile_label_margin"
            android:layout_marginTop="@dimen/profile_label_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyEditText"
            android:textColorHint="@color/colorText">
            <EditText
                android:id="@+id/p_first_name"
                android:hint="@string/string_label_first_name"
                android:textColor="@color/color_edit_color_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginRight="@dimen/profile_label_margin"
            android:layout_marginLeft="@dimen/profile_label_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyEditText"
            android:textColorHint="@color/colorText">
            <EditText
                android:id="@+id/p_second_name"
                android:hint="@string/string_label_second_name"
                android:textColor="@color/color_edit_color_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginRight="@dimen/profile_label_margin"
            android:layout_marginLeft="@dimen/profile_label_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyEditText"
            android:textColorHint="@color/colorText">
            <EditText
                android:id="@+id/p_user_name"
                android:hint="@string/string_label_user_name"
                android:textColor="@color/color_edit_color_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginRight="@dimen/profile_label_margin"
            android:layout_marginLeft="@dimen/profile_label_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyEditText"
            android:textColorHint="@color/colorText">
            <EditText
                android:id="@+id/p_email"
                android:hint="@string/string_label_email"
                android:textColor="@color/color_edit_color_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textWebEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginRight="@dimen/profile_label_margin"
            android:layout_marginLeft="@dimen/profile_label_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyEditText"
            android:textColorHint="@color/colorText">
            <EditText
                android:id="@+id/p_section_name"
                android:hint="@string/string_label_section_name"
                android:textColor="@color/color_edit_color_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/p_tv_gender"
            android:text="@string/string_label_gender"
            android:textSize="@dimen/profile_text_size"
            android:textColor="@color/colorText"
            android:layout_margin="@dimen/profile_label_margin"
            android:textAlignment="gravity"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginRight="@dimen/profile_label_margin"
            android:layout_marginLeft="@dimen/profile_label_margin"
            android:id="@+id/radio_group_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <RadioGroup
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_marginLeft="@dimen/profile_gender_margin"
                    android:layout_marginRight="@dimen/profile_gender_margin"
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorText"
                    android:text="@string/string_male"
                    android:textStyle="bold" />
                <RadioButton
                    android:layout_marginLeft="@dimen/profile_gender_margin"
                    android:layout_marginRight="@dimen/profile_gender_margin"
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorText"
                    android:text="@string/string_female"
                    android:textStyle="bold" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/p_tv_age"
            android:text="@string/string_label_age"
            android:textSize="@dimen/profile_text_size"
            android:textColor="@color/colorText"
            android:layout_margin="@dimen/profile_label_margin"
            android:textAlignment="gravity"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_age"
            android:textSize="@dimen/profile_text_size"
            android:textColor="@color/colorText"
            android:layout_marginRight="@dimen/profile_label_margin"
            android:layout_marginLeft="@dimen/profile_label_margin"
            android:textAlignment="gravity"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/array_age"/>



        <TextView
            android:id="@+id/p_tv_role"
            android:text="@string/string_label_role"
            android:textSize="@dimen/profile_text_size"
            android:textColor="@color/colorText"
            android:layout_margin="@dimen/profile_label_margin"
            android:textAlignment="gravity"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginRight="@dimen/profile_label_margin"
            android:layout_marginLeft="@dimen/profile_label_margin"
            android:id="@+id/radio_group_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <RadioGroup
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:layout_marginLeft="@dimen/profile_gender_margin"
                    android:layout_marginRight="@dimen/profile_gender_margin"
                    android:id="@+id/role_student"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorText"
                    android:text="@string/string_student"
                    android:textStyle="bold" />
                <RadioButton
                    android:layout_marginLeft="@dimen/profile_gender_margin"
                    android:layout_marginRight="@dimen/profile_gender_margin"
                    android:id="@+id/role_teacher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorText"
                    android:text="@string/string_teacher"
                    android:textStyle="bold" />
                <RadioButton
                    android:layout_marginLeft="@dimen/profile_gender_margin"
                    android:layout_marginRight="@dimen/profile_gender_margin"
                    android:id="@+id/role_principal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorText"
                    android:text="@string/string_principal"
                    android:textStyle="bold" />
                <RadioButton
                    android:layout_marginLeft="@dimen/profile_gender_margin"
                    android:layout_marginRight="@dimen/profile_gender_margin"
                    android:id="@+id/role_parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorText"
                    android:text="@string/string_parent"
                    android:textStyle="bold" />
            </RadioGroup>
        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_marginRight="@dimen/profile_label_margin"
            android:layout_marginLeft="@dimen/profile_label_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyEditText"
            android:textColorHint="@color/colorText">
            <EditText
                android:id="@+id/p_telephone"
                android:hint="@string/string_label_telephone"
                android:textColor="@color/color_edit_color_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginRight="@dimen/profile_label_margin"
            android:layout_marginLeft="@dimen/profile_label_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyEditText"
            android:textColorHint="@color/colorText">
            <EditText
                android:id="@+id/p_password"
                android:hint="@string/string_label_password"
                android:textColor="@color/color_edit_color_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:id="@+id/p_tv_password"
            android:text="@string/string_label_password_blank"
            android:textSize="@dimen/profile_text_size_password_blank"
            android:textColor="@color/colorText"
            android:textStyle="italic"
            android:layout_marginTop="@dimen/profile_password_margin_top"
            android:layout_marginLeft="@dimen/profile_label_margin"
            android:layout_marginRight="@dimen/profile_label_margin"
            android:layout_marginBottom="@dimen/profile_label_margin"
            android:textAlignment="gravity"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <android.support.design.widget.TextInputLayout
            android:layout_marginRight="@dimen/profile_label_margin"
            android:layout_marginLeft="@dimen/profile_label_margin"
            android:layout_marginBottom="@dimen/profile_label_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyEditText"
            android:textColorHint="@color/colorText">
            <EditText
                android:id="@+id/p_confirm_password"
                android:hint="@string/string_label_password_confirmation"
                android:textColor="@color/color_edit_color_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_margin="@dimen/profile_label_margin"
            android:id="@+id/p_update"
            android:text="@string/string_update_profile"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/user_button_bg_2"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>