<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.plan9.naseemdev.naseem.Parent"
    tools:showIn="@layout/app_bar_parent"
    android:background="@drawable/b3">


    <TextView
        android:id="@+id/test_label"
        android:layout_margin="@dimen/parent_test_margin_padding"
        android:padding="@dimen/parent_test_margin_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textSize="@dimen/parent_error_text_size"
        android:textColor="@color/color_transparent_95_p"
        android:text="@string/string_test"/>

    <LinearLayout
        android:layout_below="@id/test_label"
        android:id="@+id/reload_Parent_Layout"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_margin="@dimen/reload_image_margin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/reload_image_WH"
            android:src="@drawable/reload"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/reload_image_margin"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="@dimen/reload_text_size"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            android:text="@string/string_reload_tests"/>
    </LinearLayout>
    <com.srx.widget.PullToLoadView
        android:layout_below="@id/reload_Parent_Layout"
        android:id="@+id/pull_to_load_parent_test"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <TextView
        android:layout_below="@id/pull_to_load_parent_test"
        android:id="@+id/parent_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/reload_image_margin"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="@dimen/parent_error_text_size"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:text="@string/string_parent_not_authorized"/>
</RelativeLayout>
